@@ -5,6 +5,9 @@ Differences between current and Android 2.2:
 
 - <pthread.h>: Add reader/writer locks implementation.
 
+- <semaphore.h>: Use private futexes for semaphore implementation,
+  unless your set 'pshared' to non-0 when calling sem_init().
+
 -------------------------------------------------------------------------------
 Differences between Android 2.2. and Android 2.1:
 
